add application grid
