# internal/envrouter/ref.go
@@ -5,11 +5,12 @@ import (
 	"github.com/ghodss/yaml"
 	"gitlab.com/jonasasx/envrouter/internal/envrouter/api"
 	"gitlab.com/jonasasx/envrouter/internal/envrouter/k8s"
+	"sort"
 )
 
 type RefService interface {
 	SaveBinding(refBinding *api.RefBinding) (*api.RefBinding, error)
-	FindAllBindings() ([]*api.RefBinding, error)
+	FindAllBindings(environmentFilter *string, applicationFilter *string, refFilter *string) ([]*api.RefBinding, error)
 }
 
 type refService struct {
@@ -44,7 +45,7 @@ func (r *refService) SaveBinding(refBinding *api.RefBinding) (*api.RefBinding, e
 	return refBinding, r.dataStorage.Save(refBinding.Environment+"-"+refBinding.Application, string(value))
 }
 
-func (r *refService) FindAllBindings() ([]*api.RefBinding, error) {
+func (r *refService) FindAllBindings(environmentFilter *string, applicationFilter *string, refFilter *string) ([]*api.RefBinding, error) {
 	data, err := r.dataStorage.GetAll()
 	if err != nil {
 		return nil, err
@@ -68,12 +69,21 @@ func (r *refService) FindAllBindings() ([]*api.RefBinding, error) {
 	}
 	result := []*api.RefBinding{}
 	for _, environment := range environments {
+		if environmentFilter != nil && *environmentFilter != "" && *environmentFilter != environment.Name {
+			continue
+		}
 		for _, application := range applications {
+			if applicationFilter != nil && *applicationFilter != "" && *applicationFilter != application.Name {
+				continue
+			}
 			var ref string
 			if v, ok := bindings[environment.Name+"-"+application.Name]; ok {
 				ref = v
 			} else {
 				ref = DefaultRef
+			}
+			if refFilter != nil && *refFilter != "" && *refFilter != ref {
+				continue
 			}
 			item := api.RefBinding{
 				Environment: environment.Name,
@@ -83,5 +93,8 @@ func (r *refService) FindAllBindings() ([]*api.RefBinding, error) {
 			result = append(result, &item)
 		}
 	}
+	sort.Slice(result, func(i, j int) bool {
+		return result[i].Environment < result[j].Environment && result[i].Application < result[j].Application
+	})
 	return result, nil
 }
